2001-08-24 Vince Darley <vincentdarley@users.sourceforge.net>

	Variety of small filesystem and vfs issues fixed or improved.
	The new fs code allows many new opportunities for efficiency
	improvements through the objectified API. The main changes
	integrated here are such efficiency improvements.  Some
	limitations of the original implementation have also now been
	lifted.  Meanwhile a variety of fs bugs (some old, some new)
	have also been fixed.
	
	* generic/tclFileName.c: Made Tcl_FSSplitPath more efficient, 
	and removed some static string-based procedures which are no 
	longer used.  Much more objectification.  Tcl_FSJoinPath
	is now very efficient and more aware of virtual filesystems.
	Clarified where the Mac-specific code attempts to interpret
	Unix-style paths.  Modified TclDoGlob to use lstat not
	access to fix [Bug: 434876, L. Virden]
	* tcl(Win|Unix|Mac)FCmd.c:
	* tcl(Win|Unix|Mac)File.c: replaced TclpListVolumes with
	TclpObjListVolumes with different signature, updated code due
	to more efficient signature of Tcl_FSGetTranslatedPath.  Used
	cached native paths where possible to improve efficiency --
	this was completed on MacOS, but on Unix and Win the traversal
	functions make the task much more complex, so there are still
	some improvements possible there.  Removed unused 
	TclpNormalizePath which had been left in tclWinFCmd.c.
	Objectified all 'file attributes' functions.  Fixed the new
	[Bug:451571, Bruce Stephens] which is most obvious on Unix, 
	but could occur on MacOS or Windows.  This bug actually existed
	in Tcl 8.3.x but was only made obvious by the recent filesystem
	overhaul when the code was exercised more heavily.  
	* tests/fileName.test: Three new tests to exercise the above bug,
	and make sure it is fixed correctly.
	* unix/tclUnixFile.c: avoid panic in glob when a link
	doesn't point anywhere.  It would probably be good to define
	exactly what Tcl should do in circumstances like these, and